--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-plugin-rewire": "^1.0.0-rc-3",
     "chai": "^3.5.0",
     "enzyme": "^2.2.0",
     "eslint": "^2.7.0",
@@ -34,7 +35,7 @@
     "mockery": "^1.6.2",
     "react-addons-test-utils": "^0.14.6",
     "react-dom": "^0.14.8",
-    "react-native-mock": "0.0.7",
+    "react-native-mock": "^0.2.3",
     "sinon": "^1.17.3"
   }
 }
