--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "mocha --require test/setup.js --recursive test/components/*.js"
+    "test": "mocha --compilers js:babel-core/register --require test/setup.js --recursive test/components/*.js"
   },
   "dependencies": {
     "react": "^15.1.0",
@@ -25,7 +25,9 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-plugin-rewire": "^1.0.0-rc-3",
+    "babel-preset-react-native": "^1.9.0",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.0",
     "enzyme": "^2.2.0",
     "eslint": "^2.7.0",
     "eslint-plugin-react": "^4.3.0",
