--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-native-maps": "^0.4.2",
     "react-native-router-flux": "^3.30.0",
     "react-native-slider": "^0.8.0",
+    "react-redux": "4.4.5",
+    "redux": "3.5.2",
     "rx": "^4.1.0",
     "slash": "^1.0.0",
     "spatialconnect": "0.2.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-plugin-rewire": "^1.0.0-rc-3",
+    "babel-polyfill": "6.9.1",
     "babel-preset-react-native": "^1.9.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.5.0",
@@ -38,6 +41,7 @@
     "react-addons-test-utils": "^0.14.6",
     "react-dom": "^0.14.8",
     "react-native-mock": "^0.2.3",
+    "should": "9.0.2",
     "sinon": "^1.17.3"
   }
 }
