--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-slider": "^0.8.0",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
+    "redux-thunk": "2.1.0",
     "rx": "^4.1.0",
     "slash": "^1.0.0",
     "spatialconnect": "0.2.0",
